HW4/P2/A/slurm-105512.out
p2a.cpp: In function ‘void generateData(std::vector<int>&)’:
p2a.cpp:22:31: error: invalid operands of types ‘int() noexcept’ and ‘int’ to binary ‘operator%’
   22 |                 arr[i] = rand % MAX_RAND + 1;
      |                          ~~~~ ^
      |                          |
      |                          int() noexcept
p2a.cpp: In function ‘void getHistogram(const std::vector<int>&, std::vector<int>&)’:
p2a.cpp:28:24: error: ‘data’ was not declared in this scope; did you mean ‘std::data’?
   28 |         for(auto val : data){
      |                        ^~~~
      |                        std::data
In file included from /usr/include/c++/11/string:54,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from p2a.cpp:2:
/usr/include/c++/11/bits/range_access.h:319:5: note: ‘std::data’ declared here
  319 |     data(initializer_list<_Tp> __il) noexcept
      |     ^~~~
p2a.cpp:29:28: error: ‘value’ was not declared in this scope
   29 |                 int bin = (value - 1) / (MAX_RAND / BINS);
      |                            ^~~~~
p2a.cpp:30:17: error: ‘histogram’ was not declared in this scope; did you mean ‘getHistogram’?
   30 |                 histogram[bin]++;
      |                 ^~~~~~~~~
      |                 getHistogram
p2a.cpp: In function ‘int main(int, char**)’:
p2a.cpp:39:9: error: ‘MPI_comm_rank’ was not declared in this scope; did you mean ‘MPI_Comm_rank’?
   39 |         MPI_comm_rank(MPI_COMM_WORLD, &rank);
      |         ^~~~~~~~~~~~~
      |         MPI_Comm_rank
--------------------------------------------------------------------------
mpirun was unable to find the specified executable file, and therefore
did not launch the job.  This error was first reported for process
rank 0; it may have occurred for other processes as well.

NOTE: A common cause for this error is misspelling a mpirun command
      line parameter option (remember that mpirun interprets the first
      unrecognized command line token as the executable).

Node:       c0441
Executable: p2a
--------------------------------------------------------------------------
16 total processes failed to start
